# medical-deep-agent

./: .gitignore  README.md  artifact_builder_tool.py  citation_registry.md  evidence_matrix.md  final_report.md  final_report_tool.md  gap_analysis.md  gap_clusters.json  gap_reasoning_tool.py  idea_bank.md  langgraph.json  langgraph_report.md  main.py  pyproject.toml  raw_evidence.json  research_plan.md
.langgraph_api/: .langgraph_ops.pckl
research-notes/: source_notes.md
skills/deep-research/: SKILL.md
