[project]
name = "medical-deep-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deepagents>=0.6.11",
    "langgraph-cli[inmem]>=0.4.30",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
    "langchain-openai>=1.0.0",
    "numpy>=2.5.0",
    "scikit-learn>=1.9.0",
]
